--- a/codegpt-llama2/package.json
+++ b/codegpt-llama2/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "codegpt-llama2.helloWorld",
-        "title": "Hello World"
+        "command": "codegpt-llama2.CODEGPT",
+        "title": "Code GPT"
       }
     ]
   },
@@ -28,21 +28,26 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "testCum": "tsc ./src/lib/apiCall.ts"
   },
   "devDependencies": {
-    "@types/vscode": "^1.81.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.81.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "@vscode/test-electron": "^2.3.4",
     "eslint": "^8.47.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.6",
     "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "@vscode/test-electron": "^2.3.4"
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "axios": "^1.5.0",
+    "clarifai-nodejs-grpc": "^9.7.0"
   }
 }
